--- a/portfolio_styles.css
+++ b/portfolio_styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 .leftMargin{
-	background-image: url("http://zekelong.github.io/portfolio_images/field_trees.png");
+	background-image: url(portfolio_images/field_trees.png);
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	background-position: left;
